# farol

./: .gitignore  README.md  SKILL.md  agent.py  app.html  build.js  check.py  dashboard.html  docs.html  index.html  login.html  reset.html  sdk.py  server.py  signup.html  update-password.html  vercel.json
backend/: README.md  build.js  server.py
farol-sdk/: README.md  pyproject.toml
farol-sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
farol-sdk-js/src/: index.ts
farol-sdk/.audit-venv/: pyvenv.cfg
farol-sdk/.audit-venv/Scripts/: activate  activate.bat
farol-sdk/farol/: __init__.py  sdk.py
frontend/: README.md  evals.html  robots.txt  sitemap.xml
frontend/app/: app.html  dashboard.html  demo.html  settings.html  share.html
frontend/auth/: confirmed.html  login.html  reset.html  signup.html  update-password.html
frontend/changelog/: index.html
frontend/docs/: docs.html
frontend/feedback/: index.html
frontend/landing/: index.html
frontend/legal/: privacy.html  terms.html
frontend/roadmap/: index.html
frontend/security/: index.html
sdk/: README.md  __init__.py  agent.py  check.py  demo_snippet.py  sdk.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260412120000_weekly_digest_cron_secret.sql  20260412140000_runs_notes.sql  20260415120000_subscriptions_slack_webhook_url.sql  20260422130000_share_tokens_expires_at.sql  20260422140000_runs_prompt_version.sql  20260423160000_runs_parent_trace_id.sql  20260425120000_onboarding_email.sql  20260502000000_evals_schema.sql  (+3 more)
(+23 files in other folders)
