[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "farol-sdk"
version = "0.1.1"
description = "Agent observability for builders"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Farol" },
]
keywords = ["observability", "agents", "llm", "tracing", "supabase"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
supabase = ["supabase>=2.0.0"]
resend = ["resend>=2.0.0"]
all = ["supabase>=2.0.0", "resend>=2.0.0"]

[project.urls]
Homepage = "https://usefarol.dev"

[tool.hatch.build.targets.wheel]
packages = ["farol"]
